@@ -10,7 +10,8 @@ import urllib.parse
 from io import BytesIO
 
 from packaging import logger
-from packaging.util import read_pypirc, DEFAULT_REPOSITORY, DEFAULT_REALM
+from packaging.util import (read_pypirc, DEFAULT_REPOSITORY, DEFAULT_REALM,
+                            encode_multipart)
 from packaging.errors import PackagingFileError
 from packaging.command.cmd import Command
 
@@ -26,49 +27,6 @@ def zip_dir(directory):
                 dest = os.path.join(relative, name)
                 zip_file.write(full, dest)
     return destination
-
-
-# grabbed from
-#    http://code.activestate.com/recipes/
-#    146306-http-client-to-post-using-multipartform-data/
-# TODO factor this out for use by install and command/upload
-
-def encode_multipart(fields, files, boundary=None):
-    """
-    *fields* is a sequence of (name: str, value: str) elements for regular
-    form fields, *files* is a sequence of (name: str, filename: str, value:
-    bytes) elements for data to be uploaded as files.
-
-    Returns (content_type: bytes, body: bytes) ready for http.client.HTTP.
-    """
-    if boundary is None:
-        boundary = b'--------------GHSKFJDLGDS7543FJKLFHRE75642756743254'
-    elif not isinstance(boundary, bytes):
-        raise TypeError('boundary is not bytes but %r' % type(boundary))
-
-    l = []
-    for key, value in fields:
-        l.extend((
-            b'--' + boundary,
-            ('Content-Disposition: form-data; name="%s"' %
-             key).encode('utf-8'),
-            b'',
-            value.encode('utf-8')))
-
-    for key, filename, value in files:
-        l.extend((
-            b'--' + boundary,
-            ('Content-Disposition: form-data; name="%s"; filename="%s"' %
-             (key, filename)).encode('utf-8'),
-            b'',
-            value))
-    l.append(b'--' + boundary + b'--')
-    l.append(b'')
-
-    body = b'\r\n'.join(l)
-
-    content_type = b'multipart/form-data; boundary=' + boundary
-    return content_type, body
 
 
 class upload_docs(Command):
